Turned on Warnings as Errors; added XML docs

--- a/ConsoleClient/GildedRose.ConsoleClient.csproj
+++ b/ConsoleClient/GildedRose.ConsoleClient.csproj
@@ -24,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>..\GildedRose.ruleset</CodeAnalysisRuleSet>
     <DocumentationFile>bin\Debug\GildedRose.ConsoleClient.XML</DocumentationFile>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
