--- a/IdentityServer/GildedRose.IdentityServer.csproj
+++ b/IdentityServer/GildedRose.IdentityServer.csproj
@@ -23,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>..\GildedRose.ruleset</CodeAnalysisRuleSet>
     <DocumentationFile>bin\Debug\GildedRose.IdentityServer.xml</DocumentationFile>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
