Introduced a Data Transfer Object to provide isolation between the API and the Storage layer.

--- a/Tests/WebServices.Test/WebServices.Test.csproj
+++ b/Tests/WebServices.Test/WebServices.Test.csproj
@@ -86,6 +86,7 @@
     <Compile Include="DummyDataProvider.cs" />
     <Compile Include="InventoryControllerTests.cs" />
     <Compile Include="InventoryServiceTests.cs" />
+    <Compile Include="ItemEntityTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
